--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ nav {
   position: absolute;
 
   left: 994px;
-  top: 74.05px;
+  top: 72.05px;
 
   font-family: Quicksand;
   font-style: normal;
@@ -74,12 +74,11 @@ nav {
   line-height: 30px;
 
   color: #ffffff;
-  text-decoration: none;
 }
 
 .nav-sign-in {
   font-weight: bold;
-  font-size: 24px;
+  font-size: 1.2rem;
   padding: 10px 50px;
   background-color: #156064;
   color: white;
@@ -229,6 +228,7 @@ nav {
   text-align: center;
 }
 
+
 .empower {
   width: 100%;
   margin: 0 auto;
@@ -271,6 +271,7 @@ nav {
   border-radius: 10px;
 }
 
+
 .footer2 {
   display: flex;
   flex-direction: column;
@@ -281,10 +282,11 @@ nav {
   color: #fff;
   font-size: 1.5em;
   position: absolute;
-  width: 100%;
-  height: 250px;
-  left: 2px;
-  top: 2720px;
+    width: 100%;
+    height: 250px;
+    left: 2px;
+    top: 2720px;
+  z-index: -1;
 }
 
 footer {
@@ -297,10 +299,10 @@ footer {
   color: #fff;
   font-size: 1.5em;
   position: absolute;
-  width: 100%;
-  height: 250px;
-  left: 2px;
-  top: 3100px;
+    width: 100%;
+    height: 250px;
+    left: 2px;
+    top: 3100px;
 }
 
 .footer-heading {
@@ -309,13 +311,13 @@ footer {
   padding-bottom: 0.5cm;
 }
 
-.emBtn {
-  position: absolute;
-  width: 379px;
-  height: 104px;
-  left: 724px;
-  top: 2070px;
-  transition: all 0.3s ease;
+.emBtn{
+    position: absolute;
+    width: 379px;
+    height: 104px;
+    left: 724px;
+    top: 2070px;
+    transition: all 0.3s ease;
 }
 
 .emBtn:hover {
@@ -329,13 +331,13 @@ footer {
   padding: 5%;
 }
 
-.blogBtn {
-  position: absolute;
-  width: 379px;
-  height: 104px;
-  left: 724px;
-  top: 2670px;
-  transition: all 0.3s ease;
+.blogBtn{
+    position: absolute;
+    width: 379px;
+    height: 104px;
+    left: 724px;
+    top: 2670px;    
+    transition: all 0.3s ease;
 }
 
 .blogBtn:hover {
@@ -343,14 +345,15 @@ footer {
 }
 
 .backdrop-blog {
-  position: absolute;
-  width: 99.85%;
-  height: 1195px;
-  top: 1900px;
-  background-repeat: no-repeat;
 
-  background: url('./images/Backdrop.png');
-}
+    position: absolute;
+    width: 99.85%;
+    height: 1195px;
+    top: 1900px;
+    background-repeat: no-repeat;
+    
+    background: url('./images/Backdrop.png');
+  }
 
 @media (max-width: 1200px) {
   .nav-subheadings {
@@ -358,67 +361,68 @@ footer {
   }
 }
 
+
 nav2 {
-  width: 100%;
-  height: 15%;
-  margin: 0 auto;
-  top: 10px;
-  left: 0;
-  padding: 25px 35px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #312622;
-  background-color: #fff;
-  padding-bottom: 4cm;
-}
+    width: 100%;
+    height: 15%;
+    margin: 0 auto;
+    top: 10px;
+    left: 0;
+    padding: 25px 35px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #312622;
+    background-color: #fff;
+    padding-bottom: 4cm;
+  }
+  
+  .nav2-title {
+    position: absolute;
+    width: 731.24px;
+    height: 114.72px;
+    left: 84px;
+    top: 48.28px;
+  
+    font-family: Kaushan Script;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 65px;
+    transition: all 0.3s ease;
+  }
+  
+  .nav2-title:hover {
+    transform: scale(1.1);
+  }
+  
+  .nav2-subheadings {
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    position: absolute;
+  
+    left: 994px;
+    top: 74.05px;
+  
+    font-family: Quicksand;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+  
+    color:#312622
+  }
 
-.nav2-title {
-  position: absolute;
-  width: 731.24px;
-  height: 114.72px;
-  left: 84px;
-  top: 48.28px;
-
-  font-family: Kaushan Script;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 48px;
-  line-height: 65px;
-  transition: all 0.3s ease;
-}
-
-.nav2-title:hover {
-  transform: scale(1.1);
-}
-
-.nav2-subheadings {
-  width: 50%;
-  display: flex;
-  justify-content: space-evenly;
-  position: absolute;
-
-  left: 994px;
-  top: 74.05px;
-
-  font-family: Quicksand;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 30px;
-
-  color: #312622;
-}
-
-a2 {
-  text-decoration: none;
-  color: #312622;
-}
-
-a2:hover {
-  color: #bac7c5da;
-  transition: all 0.2s ease;
-}
+  a2 {
+    text-decoration: none;
+    color:#312622
+  }
+  
+  a2:hover {
+    color: #bac7c5da;
+    transition: all 0.2s ease;
+  }
 
 @media (max-width: 1000px) {
   .header {
@@ -450,8 +454,9 @@ a2:hover {
   }
 }
 
+
 .blog-type-title {
-  background-color: #c4c4c4;
+  background-color: #C4C4C4;
   color: white;
   padding: 2.5% 3%;
   max-width: 690px;
@@ -472,15 +477,15 @@ a2:hover {
 }
 
 .purple {
-  background-color: #cfc7ff;
+  background-color: #CFC7FF;
 }
 
 .orange {
-  background-color: #ffc2b4;
+  background-color: #FFC2B4;
 }
 
 .yellow {
-  background-color: #f8e16c;
+  background-color: #F8E16C;
 }
 
 .blogcard {
