--- a/src/App.css
+++ b/src/App.css
@@ -39,46 +39,9 @@ nav {
   background-color: #00c49a;
 }
 
-.nav-title {
-  position: absolute;
-  width: 731.24px;
-  height: 114.72px;
-  left: 84px;
-  top: 48.28px;
-
-  font-family: Kaushan Script;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 48px;
-  line-height: 69px;
-  transition: all 0.3s ease;
-}
-
-.nav-title:hover {
-  transform: scale(1.1);
-}
-
-.nav-subheadings {
-  width: 50%;
-  display: flex;
-  justify-content: space-evenly;
-  position: absolute;
-
-  left: 994px;
-  top: 72.05px;
-
-  font-family: Quicksand;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 30px;
-
-  color: #ffffff;
-}
-
 .nav-sign-in {
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 24px;
   padding: 10px 50px;
   background-color: #156064;
   color: white;
@@ -197,6 +160,7 @@ nav {
   padding: 3%;
   width: 1895px;
   height: 1000px;
+
 }
 
 .mis-title {
@@ -285,39 +249,43 @@ nav {
     width: 100%;
     height: 250px;
     left: 2px;
-    top: 2720px;
+    top: 250%;
   z-index: -1;
+  text-align: center;
 }
 
 footer {
-  display: flex;
+
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   background-color: #00c49a;
   padding: 2.7%;
   color: #fff;
+
   font-size: 1.5em;
   position: absolute;
     width: 100%;
     height: 250px;
-    left: 2px;
-    top: 3100px;
+    top:250%;
+    text-align: center;
 }
 
 .footer-heading {
   font-family: 'Kaushan Script', monospace;
   font-size: 2.4em;
   padding-bottom: 0.5cm;
+  text-align: center;
 }
 
 .emBtn{
     position: absolute;
     width: 379px;
     height: 104px;
-    left: 724px;
-    top: 2070px;
+    left: 40%;
+    top: 170%;    
     transition: all 0.3s ease;
+    text-align: center;
 }
 
 .emBtn:hover {
@@ -329,15 +297,17 @@ footer {
   margin: 0 auto;
   text-align: center;
   padding: 5%;
+  font-size: 27px;
 }
 
 .blogBtn{
     position: absolute;
     width: 379px;
     height: 104px;
-    left: 724px;
-    top: 2670px;    
+    left: 40%;
+    top: 210%;    
     transition: all 0.3s ease;
+    text-align: center;
 }
 
 .blogBtn:hover {
@@ -346,7 +316,7 @@ footer {
 
 .backdrop-blog {
 
-    position: absolute;
+    position: center;
     width: 99.85%;
     height: 1195px;
     top: 1900px;
@@ -414,6 +384,69 @@ nav2 {
     color:#312622
   }
 
+nav1 {
+  width: 100%;
+  height: 15%;
+  margin: 0 auto;
+  top: 10px;
+  left: 0;
+  padding: 25px 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  background-color: #00c49a;
+  padding-bottom: 4cm;
+}
+
+.nav1-title {
+  position: absolute;
+  width: 731.24px;
+  height: 114.72px;
+  left: 84px;
+  top: 48.28px;
+
+  font-family: Kaushan Script;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 65px;
+  transition: all 0.3s ease;
+}
+
+.nav1-title:hover {
+  transform: scale(1.1);
+}
+
+.nav1-subheadings {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  position: absolute;
+
+  left: 994px;
+  top: 74.05px;
+
+  font-family: Quicksand;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+
+  color:#fff
+}
+
+
+  a1 {
+    text-decoration: none;
+    color:#fff
+  }
+
+  a1:hover {
+    color: #312622;
+    transition: all 0.2s ease;
+  }
+
   a2 {
     text-decoration: none;
     color:#312622
@@ -465,15 +498,18 @@ nav2 {
   border-radius: 40px;
   margin-top: 5%;
   margin-bottom: 5%;
-  font-size: 1.4em;
+  font-size: 27px;
+  text-align: center;
 }
 
 .blogcards-container {
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   padding-bottom: 1cm;
+  font-size: 27px;
 }
 
 .purple {
