--- a/src/pages/Blog/GreenBar.module.css
+++ b/src/pages/Blog/GreenBar.module.css
@@ -1,10 +1,11 @@
 .green {
 
     position: absolute;
-    width: 1889px;
     height: 97px;
     left: 0px;
     top: 183px;
+    position: center;
+    width: 99.85%;
     
     background-repeat: no-repeat;
     
